Alignment fixes in footer and header.

--- a/src/pages/Navbar/index.scss
+++ b/src/pages/Navbar/index.scss
@@ -4,6 +4,11 @@
     justify-content: space-between;
 }
 
+.custom-container{
+    max-width: 95%;
+    margin: auto;
+}
+
 .header-css{
     display: flex;
     align-items: center;
